# Console-vid-player

./: Cargo.toml  README.md
src/: main.rs  util.rs
