[package]
name = "console-vid-player"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "*"
sha2 = "*"
dirs = "3.0.2"
serde_json = "1.0"
play = "0.5.3"
[dependencies.serde]
version = "*"
features = ["derive"]

